--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="#"><img src="/dist/img/logoD.svg" alt="logo"></a>
+            <a href="#"><img src="dist/img/logoD.svg" alt="logo"></a>
             <nav class="header_navigation">
                 <ul class="header_navigation_list">
                     <li class="header_navigation_list_point">Про нас</li>
@@ -43,7 +43,7 @@
             <div class="container">
                 <h2 class="about_title">Про нас</h2>
                 <article class="about_blockInformation_1">
-                    <img src="/dist/img/1Section2.png" alt="cat and dog foto"
+                    <img src="dist/img/1Section2.png" alt="cat and dog foto"
                         class="about_blockInformation_1_foto">
                     <p class="about_blockInformation_1_info">Ми - команда любителів тварин,
                         які прагнуть допомогти вам зробити
@@ -54,7 +54,7 @@
                     <p class="about_blockInformation_2_info">Ми пропонуємо широкий спектр інформації та ресурсів, щоб
                         допомогти вам доглядати за своїми домашніми тваринами, дресирувати їх, годувати та підтримувати
                         їхнє здоров'я.</p>
-                    <img src="/dist/img/backgSection 2.png" alt="dog foto" class="about_blockInformation_2_foto">
+                    <img src="dist/img/backgSection 2.png" alt="dog foto" class="about_blockInformation_2_foto">
                 </article>
             </div>
         </section>
@@ -79,30 +79,30 @@
         </section>
         <section class="reviews">
             <div class="container">
-                <h2 class="reviews_title">ВІдгуки</h2>
+                <h2 class="reviews_title">Відгуки</h2>
                 <div class="reviews_block">
                     <div class="reviews_block_information">
                         <p class="reviews_block_information_text">Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. Fusce vitae libero dolor. </p>
                         <ul class="reviews_block_information_list">
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                         </ul>
@@ -115,23 +115,23 @@
                             elit. Fusce vitae libero dolor. </p>
                         <ul class="reviews_block_information_list">
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                         </ul>
@@ -144,23 +144,23 @@
                             elit. Fusce vitae libero dolor. </p>
                         <ul class="reviews_block_information_list">
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                             <li class="reviews_block_information_list_point">
-                                <img src="/dist/img/star.svg" alt="star"
+                                <img src="dist/img/star.svg" alt="star"
                                     class="reviews_block_information_list_point_star">
                             </li>
                         </ul>
@@ -172,7 +172,7 @@
     <footer>
         <div class="container">
             <div class="footer_information">
-                <a href="#"><img src="/dist/img/logoD.svg" alt="logo"></a>
+                <a href="#"><img src="dist/img/logoD.svg" alt="logo"></a>
                 <div class="footer_informatio_contact">
                     <h4 class="footer_informatio_contact_title">Контактна інформація</h4>
                     <ul class="footer_informatio_contact_list">
@@ -195,37 +195,37 @@
                     <ul class="footer_informatio_web_list">
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/youtube.svg" alt="youtube"
+                                <img src="dist/img/youtube.svg" alt="youtube"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/instagram.svg" alt="instagram"
+                                <img src="dist/img/instagram.svg" alt="instagram"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/twitter.svg" alt="twitter"
+                                <img src="dist/img/twitter.svg" alt="twitter"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/theard.svg" alt="theard"
+                                <img src="dist/img/theard.svg" alt="theard"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/tikTok.svg" alt="TikTok"
+                                <img src="dist/img/tikTok.svg" alt="TikTok"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
                         <li class="footer_informatio_web_list_point">
                             <a href="#" class="footer_informatio_web_list_point_link">
-                                <img src="/dist/img/Facebook.svg" alt="Facebook"
+                                <img src="dist/img/Facebook.svg" alt="Facebook"
                                     class="footer_informatio_web_list_point_link_logo">
                             </a>
                         </li>
