--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p class="home_singUp_information">Підпишіться на нашу розсилку,
                         щоб отримувати нові статті та поради
                         про домашніх тварин!</p>
-                    <form action="" class="home_singUp_form">
+                    <form action="URL" class="home_singUp_form">
                         <input type="text" placeholder="Enter your email" class="home_singUp_form_input">
                     </form>
                 </div>
@@ -42,20 +42,20 @@
         <section class="about">
             <div class="container">
                 <h2 class="about_title">Про нас</h2>
-                <article class="about_blockInformation_1">
+                <div class="about_blockInformation_1">
                     <img src="dist/img/1Section2.png" alt="cat and dog foto"
                         class="about_blockInformation_1_foto">
                     <p class="about_blockInformation_1_info">Ми - команда любителів тварин,
                         які прагнуть допомогти вам зробити
                         життя з вашими пухнастими друзями
                         щасливим та здоровим</p>
-                </article>
-                <article class="about_blockInformation_2">
+                </div>
+                <div class="about_blockInformation_2">
                     <p class="about_blockInformation_2_info">Ми пропонуємо широкий спектр інформації та ресурсів, щоб
                         допомогти вам доглядати за своїми домашніми тваринами, дресирувати їх, годувати та підтримувати
                         їхнє здоров'я.</p>
                     <img src="dist/img/backgSection 2.png" alt="dog foto" class="about_blockInformation_2_foto">
-                </article>
+                </div>
             </div>
         </section>
         <section class="excellence">
